k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /pythonApp
        pathType: Prefix
        backend:
          service:
            name: app-python
            port:
              number: 5000
  - host: localhost
    http:
      paths:
      - path: /jsApp
        pathType: Prefix
        backend:
          service:
            name: app-js
            port:
              number: 5001
